Verbeteringen NewEfficiency.
Het werkt nog niet voor iteratie3, maar het enige verschil is normaal
dat singleTasks anders moet worden aangemaakt.